--- a/whatisnewdialog/gradle.properties
+++ b/whatisnewdialog/gradle.properties
@@ -1,3 +1,4 @@
 POM_NAME=What Is New Dialog
-POM_ARTIFACT_ID=whatisnew
+POM_ARTIFACT_ID=whatisnewdialog
+POM_DESCRIPTION=An Android library for displaying a dialog where it presents new features in the app.
 POM_PACKAGING=aar
