--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ android:
     - sys-img-armeabi-v7a-android-22
     - sys-img-armeabi-v7a-android-17
 
+before_install:
+ - chmod +x gradlew
+
 script:
   - ./gradlew clean connectedCheck
 
