maven deploy fixes

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,6 +18,7 @@ org.gradle.jvmargs=-Xmx1536m
 
 GROUP=com.nonzeroapps.whatisnewdialog
 VERSION_NAME=1.0.0
+VERSION_CODE=1
 
 POM_DESCRIPTION=An Android library for displaying a dialog where it presents new features in the app.
 
