--- a/whatisnewdialog-sample/src/main/AndroidManifest.xml
+++ b/whatisnewdialog-sample/src/main/AndroidManifest.xml
@@ -20,5 +20,6 @@
 
     </application>
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
