new version 1.0.4 release

--- a/gradle.properties
+++ b/gradle.properties
@@ -35,3 +35,5 @@ POM_LICENCE_DIST=repo
 
 POM_DEVELOPER_ID=berkayturanci
 POM_DEVELOPER_NAME=Berkay Turancı
+android.useAndroidX=true
+android.enableJetifier=true
