--- a/whatisnewdialog/build.gradle
+++ b/whatisnewdialog/build.gradle
@@ -1,15 +1,14 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion '26.0.2'
+    compileSdkVersion 28
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 26
-        versionCode 4
-        versionName "1.0.3"
+        targetSdkVersion 28
+        versionCode 5
+        versionName "1.0.4"
 
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
     }
     buildTypes {
@@ -24,18 +23,16 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testImplementation 'junit:junit:4.12'
 
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support:design:26.1.0'
-    implementation ('com.github.bumptech.glide:glide:4.4.0') {
-        exclude group: 'com.android.support'
-    }
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.4.0'
-    implementation 'com.android.support:palette-v7:26.1.0'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+    implementation 'androidx.palette:palette:1.0.0'
     implementation 'com.xgc1986.android:parallaxpagertransformer:1.0.4'
 }
 
