dark mode fixed done with support version of library

--- a/whatisnewdialog/build.gradle
+++ b/whatisnewdialog/build.gradle
@@ -1,10 +1,13 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.github.dcendents.android-maven'
+
+group='com.nonzeroapps.whatisnewdialog'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode 5
         versionName "1.0.4"
 
